overflow hidden FIX

--- a/bac.css
+++ b/bac.css
@@ -36,14 +36,14 @@
           box-sizing: border-box;
           -webkit-font-smoothing: antialiased;
           -moz-osx-font-smoothing: grayscale;
+          overflow: hidden;
 }
 
 html,body{
   width: 100%;
   height: 100%;
-  overflow-x: hidden;
   overflow: scroll;
-    -webkit-overflow-scrolling: touch;
+  -webkit-overflow-scrolling: touch;
 }
 
 header{
